added .env support to docker

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,7 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: frontend-healtcare
+    env_file: .env
     ports:
       - "3000:80"
 
